--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,12 @@
         class="flex flex-col transition-all duration-500 border-0 border-r border-vls/40 dark:border-vds3neu700 bg-vlp dark:bg-vdp"
         x-ref="mainSidebar">
         <!-- MARK:ROW-1-ContentButtons -->
-        <div class="flex flex-col items-center justify-start gap-4">
+        <div class="flex flex-col items-center justify-center gap-8 mt-8">
           <!-- CLIENTS -->
           <button
             @click="tabButtonClicked('clients')"
-            :class="{ 'tab-button-active': tabContentActive('clients') }"
-            class="flex items-center tab-button">
-            <div x-show="sideBar" class="flex items-center p-2">
+            :class="tabContentActive('clients') ? 'tab-button-active' : 'tab-button'">
+            <div x-show="sideBar" class="flex p-2">
               <svg width="24" height="24" class="mr-1.5">
                 <use href="/icons/icons.svg#user-group" />
               </svg>
@@ -40,9 +39,8 @@
           <!-- INVOICES 2 -->
           <button
             @click="tabButtonClicked('invoices2')"
-            :class="{ 'tab-button-active': tabContentActive('invoices') }"
-            class="flex items-center tab-button">
-            <div x-show="sideBar" class="flex items-center p-2">
+            :class="tabContentActive('invoices2') ? 'tab-button-active' : 'tab-button'">
+            <div x-show="sideBar" class="flex p-2">
               <svg width="24" height="24" class="mr-1.5">
                 <use href="/icons/icons.svg#pound-text" />
               </svg>
@@ -57,9 +55,8 @@
           <!-- EDITOR -->
           <button
             @click="tabButtonClicked('editor')"
-            :class="{ 'tab-button-active': tabContentActive('editor') }"
-            class="tab-button">
-            <div x-show="sideBar" class="flex items-center p-2">
+            :class="tabContentActive('editor') ? 'tab-button-active' : 'tab-button'">
+            <div x-show="sideBar" class="flex p-2">
               <svg width="24" height="24" class="mr-1.5">
                 <use href="/icons/icons.svg#editor" />
               </svg>
@@ -77,7 +74,7 @@
           <button @click="loadHtmlSlideOver(); $nextTick(() => { slideOverOpen = true });" class="p-2 tab-button">
             <!-- Icons Logic -->
             <div x-show="sideBar" class="flex items-center justify-center">
-              <svg width="22" height="22" class="mr-1.5">
+              <svg width="24" height="24" class="mr-1.5">
                 <use href="/icons/icons.svg#items" />
               </svg>
               <span>Items</span>
