--- a/public/html/invoices/totals.html
+++ b/public/html/invoices/totals.html
@@ -134,25 +134,26 @@
         </svg>
         Note
       </button>
-      <div x-show="$store.invo.modNote" x-transition.duration.300 x-anchor.top.offset.10="$refs.noteAnchor">
-        <div @keyup.escape="$store.invo.modNote = false" class="z-10 p-4 bg-white border rounded shadow-md">
-          <h3 class="text-lg font-semibold mb-2">Note</h3>
-          <input
-            x-ref="noteInput"
+      <div
+        x-show="$store.invo.modNote"
+        @keyup.escape="$store.invo.modNote = false"
+        x-transition.duration.300
+        x-anchor.top.offset.10="$refs.noteAnchor">
+        <div class="relative w-full max-w-xs mx-auto z-50">
+          <textarea
+            x-data="{ 
+                    resize () { 
+                        $el.style.height = '0px'; 
+                        $el.style.height = $el.scrollHeight + 'px' 
+                    } 
+                }"
+            x-init="resize()"
+            @input="resize()"
             type="text"
-            x-model="$store.invo.totals.note"
-            placeholder="Note text"
-            class="w-full p-2 border rounded mb-2" />
-          <div class="flex justify-between">
-            <button
-              @click="$store.invo.submitNote"
-              class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
-              Apply
-            </button>
-            <button @click="$store.invo.deleteNote" class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700">
-              Reset
-            </button>
-          </div>
+            placeholder="Type your message here and press enter when you are ready to insert note into invoice."
+            class="flex relative z-50 peer w-full h-auto min-h-[80px] px-3 py-2 text-sm bg-white border-2 border-neutral-900 placeholder:text-neutral-500 focus:text-neutral-800 focus:border-neutral-900 focus:outline-none focus:ring-0 disabled:cursor-not-allowed disabled:opacity-50"></textarea>
+          <div
+            class="absolute inset-0 z-10 w-full h-full -m-1 duration-300 ease-out translate-x-2 translate-y-2 bg-black peer-focus:m-0 peer-focus:translate-x-0 peer-focus:translate-y-0"></div>
         </div>
       </div>
       <button @click="generateInvoice" class="flex items-center gap-2 modal-btn-sec">
