--- a/public/html/clients.html
+++ b/public/html/clients.html
@@ -2,22 +2,21 @@
   <!-- If no client is selected, show the selection modal -->
 
   <div class="relative px-2 py-0 overflow-y-auto table-scrollbar" style="max-height: 80vh">
-    <div class="inset-0 p-0.5 mb-8 align-baseline border rounded-md border-vls/60 dark:border-vls/40">
-      <div class="bg-vls3 dark:bg-vdp flex justify-between p-2 rounded-md">
-        <button
-          @click="$store.clients.showAddClientModal = true; 
+    <div
+      class="inset-0 p-2 bg-white shadow mb-8 align-baseline dark:bg-vdp border border-vls/60 dark:border-vls/40 rounded flex justify-between">
+      <button
+        @click="$store.clients.showAddClientModal = true; 
           if($store.clients.showAddClientModal) $nextTick(() => $refs.addNewClientName.focus())"
-          @keydown.escape.window="showAddClientModal = false"
-          class="flex items-baseline butt-style p-1">
-          <svg class="mr-1.5 size-4">
-            <use href="/icons/icons.svg#user-plus" />
-          </svg>
-          <span class="flex self-center">Add Client</span>
-        </button>
-        <h3
-          class="self-center text-md text-vlp2 dark:text-vds underline decoration-vla dark:decoration-vda"
-          x-text="`${$store.clients.selectedClient.name || 'No selected client'}`"></h3>
-      </div>
+        @keydown.escape.window="showAddClientModal = false"
+        class="modal-btn-prim">
+        <svg class="size-4">
+          <use href="/icons/icons.svg#user-plus" />
+        </svg>
+        <span class="flex self-center">Add Client</span>
+      </button>
+      <h3
+        class="self-center text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda"
+        x-text="`${$store.clients.selectedClient.name || 'No selected client'}`"></h3>
     </div>
     <!-- Clients Table -->
     <table class="w-full border-separate text-vls" style="border-spacing: 0 10px">
