--- a/public/html/invoices/tabsInvoice.html
+++ b/public/html/invoices/tabsInvoice.html
@@ -2,27 +2,22 @@
 <div>
   <template x-if="$store.clients.selectedClient !== null">
     <div>
-      <div class="inset-0 p-0.5 mb-12 align-baseline border rounded-md border-vls/60 dark:border-vls/40">
-        <div class="bg-vls3 dark:bg-vdp flex justify-between p-2 rounded-md">
-          <div>
-            <button
-              @click="$store.clients.showClientModal = true"
-              class="flex items-center modal-btn-prim !border border-vlp2">
-              <svg class="mr-1.5 size-4">
-                <use href="/icons/icons.svg#select-client" />
-              </svg>
-              Select Client
-            </button>
-          </div>
-          <h3
-            class="self-center text-md text-vlp2 dark:text-vds underline decoration-vla dark:decoration-vda"
-            x-text="`${$store.clients.selectedClient.name || 'No selected client'}`"></h3>
-        </div>
+      <div
+        class="p-2 mb-12 align-baseline border justify-between flex rounded border-vls/40 dark:border-vls/40 dark:bg-vdp bg-white shadow">
+        <button @click="$store.clients.showClientModal = true" class="modal-btn-prim">
+          <svg class="size-4">
+            <use href="/icons/icons.svg#select-client" />
+          </svg>
+          Select Client
+        </button>
+        <h3
+          class="self-center text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda"
+          x-text="`${$store.clients.selectedClient.name || 'No selected client'}`"></h3>
       </div>
 
       <!-- MARK: TABS ALPINE -->
       <div class="relative w-full max-w-full mb-12">
-        <div x-ref="invoicingTabButtons" class="mb-2 toggler">
+        <div x-ref="invoicingTabButtons" class="mb-2 toggler shadow">
           <!-- Styles Tab Button -->
           <button
             :id="$id(invoicingTabId)"
@@ -44,7 +39,8 @@
             <div class="toggler-handle-inner"></div>
           </div>
         </div>
-        <div class="relative text-xs border rounded-md border-vls/40 text-vlp dark:text-vds">
+        <div
+          class="relative text-xs border rounded shadow bg-white dark:bg-vdp2 dark:shadow border-vls/40 text-vlp dark:text-vds">
           <div :id="$id(invoicingTabId + '-content')" x-show="invoicingTabContentActive($el)" class="relative p-2">
             <!-- MARK:STYLES -->
             <div class="flex justify-between align-middle mb-2">
@@ -55,6 +51,10 @@
                 placeholder="Search Styles..."
                 class="transition-all duration-500 srch-style"
                 x-model="search" />
+              <ul class="text-vds2">
+                <li>MAKE DEPOSIT/DISCOUNT GREAT AGAIN</li>
+                <li>MAKE DEPOSIT GREAT AGAIN</li>
+              </ul>
             </div>
             <div class="relative py-0 overflow-y-auto table-scrollbar" style="max-height: 35vh">
               <table class="w-[calc(100%-10px)] table-auto border-separate px-0.5" style="border-spacing: 0 10px">
